--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Checkout
-      ises: actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
