--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,12 @@ jobs:
         fetch-depth: 0
 
     - name: Use Node.JS ${{ matrix.node-version }}
-      use: actions/setup-node@v2
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
 
     - name: NPM install, build and test
-      run: |
+      run:
         npm install
         npm test
       env: 
