--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkouts@v2
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
